# fleet_turtle

./: CMakeLists.txt  README.md  package.xml
launch/: amcl_robot1_O.launch  amcl_robot2_O.launch  amcl_robot3_O.launch  amcl_robot4_O.launch  amcl_robot5_O.launch  amcl_robot6_O.launch  goals.launch  godspeed.launch  move_base_1_O.launch  move_base_2_O.launch  move_base_3_O.launch  move_base_4_O.launch  move_base_5_O.launch  move_base_6_O.launch  navigation.launch  one_robot_O.launch  robots_O.launch  simulation.launch  teleoperation.launch
launch/include/: amcl.launch
launch/new/: amcl_new.launch  amcl_robot.launch  exploration.launch  fleet_OLD.launch  fleet_new.launch  godspeed_new.launch  main_OLD.launch  main_new.launch  move_base_new.launch  move_base_robot.launch  navigation_OLD.launch  navigation_new.launch  reference_systems.launch  robots_new.launch  single_robot.launch  single_robot_OLD.launch
maps/: map_square.pgm  map_square.yaml  map_turtleworld.pgm  map_turtleworld.yaml
msg/: SetpointMulti.msg
rviz/: turtlebot3_navigation.rviz  turtlebot3_uv_cleaning.rviz
rviz/unused/: escort_fleet.rviz  turtlebot3_navigation_new.rviz  tutorial.rviz
scripts/: action_move_base.py  explorer.py  initial_position.py  mapper.py  navigator.py  objectives.txt  read_from_txt.py  referee.py  reference_listener.py  test_tf.py  uv_cleaner.py
scripts/unused/: prova_extract.py  regulator.py
worlds/: escort_house.world
